# foc

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/: FUNDING.yml
examples/: pwm.rs
gui/: Cargo.toml  README.md
gui/.cargo/: config.toml
gui/firmware/: Cargo.toml  memory.x
gui/firmware/.cargo/: config.toml
gui/firmware/src/: main.rs
gui/gui/: Cargo.toml
gui/gui/src/: connection.rs  main.rs  widgets.rs
gui/icd/: Cargo.toml
gui/icd/src/: lib.rs
src/: lib.rs  park_clarke.rs  pid.rs  pwm.rs  svpwm.rs
