[package]
name = "foc"
version = "0.1.0"
edition = "2021"
authors = ["Caleb Fletcher <caleb@fletcher.cf>"]
description = "An implementation of various Field Oriented Control algorithms."
repository = "https://github.com/calebfletcher/foc/"
homepage = "https://github.com/calebfletcher/foc/"
license = "MIT OR Apache-2.0"
keywords = ["foc", "field oriented control", "bldc", "motor", "vector control"]
categories = [
    "algorithms",
    "embedded",
    "science::robotics",
    "no-std",
    "no-std::no-alloc",
]

[dependencies]
cordic = "0.1.5"
fixed = "1.24.0"
nalgebra = { version = "0.32.3", default-features = false }
simba = { version = "0.8.1", features = ["partial_fixed_point_support"], default-features = false }
