[package]
name = "foc"
version = "0.3.0"
edition = "2021"
authors = ["Caleb Fletcher <caleb@fletcher.cf>"]
description = "An implementation of various Field Oriented Control algorithms."
repository = "https://github.com/calebfletcher/foc/"
homepage = "https://github.com/calebfletcher/foc/"
license = "MIT OR Apache-2.0"
keywords = ["foc", "bldc", "motor", "vector-control"]
categories = [
    "algorithms",
    "embedded",
    "science::robotics",
    "no-std",
    "no-std::no-alloc",
]

[dependencies]
cordic = "0.1.5"
fixed = "1.24.0"

[dev-dependencies]
anyhow = "1.0.79"
ciborium = "0.2.1"
mcap = "0.9.0"
serde = "1.0.195"
