[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
cobs = { version = "0.2.3", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
defmt = "0.3.10"
defmt-rtt = "0.4.1"
icd = { version = "0.1.0", path = "../icd" }
panic-rtt-target = "0.2.0"
postcard = "1.1.1"
rtic = { version = "2.1.1", features = ["thumbv7-backend"] }
rtt-target = "0.6.0"
serde = { version = "1.0.215", default-features = false }
stm32f1xx-hal = { version = "0.10.0", features = ["stm32f103"] }
